--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,27 +1,32 @@
-<h1>管理者注文履歴一覧</h1>
+<br>
+<br>
 
-  <table class='table table-hover table-inverse'>
-    <thead>
+<div class="container">
+  <h3>管理者注文履歴一覧</h3>
+
+  <table class="table table-hover table-bordered table-striped">
+    <thead class="thead-dark">
       <tr>
-        <th>購入者</th>
-        <th>購入者</th>
+        <th>注文日</th>
+        <th>購入者名</th>
         <th>注文個数</th>
         <th>注文ステータス</th>
       </tr>
     </thead>
     <tbody>
-     <% @orders.each do |order| %>
-      <tr>
-         <td><%= link_to admin_order_path(order) do %>
-            <%#= link_to admin_orders_path(order_id: order.id) do %>
+      <% @orders.each do |order| %>
+        <tr>
+          <td><%= link_to admin_order_path(order) do %>
             <%= order.created_at.strftime('%Y/%m/%d') %>
-           <% end %>
-        <td><%= order.shipping_name %></td>
-      　<td><%= order.order_products.sum(:quantity) %></td>
-        <td><%= order.status_i18n %></td>
-       </tr>
-    <% end %>
-  </tbody>
-</table>
+          <% end %></td>
+          <td><%= order.shipping_name %></td>
+          <td><%= order.order_products.sum(:quantity) %></td>
+          <td><%= order.status_i18n %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-
+<br>
+<br>
