--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,45 +1,57 @@
 <div class="container">
-  <h2 class="head-line title_h2 text-center admin_product_index">ショッピングカート</h2>
+  <br>
+  <h3 class="head-line title_h2 text-center admin_product_index">ショッピングカート</h3>
 
+  <div style="text-align:right;">
+    <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete,class: "btn btn-danger btn-sm" %>
+  </div>
+  <br>
+  
   <div class="row">
     <table class="table table-hover table-bordered table-condensed">
-      <div><%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete,class: "btn btn-danger btn-sm" %></div>
-        <thead>
-          <tr>
-            <th>商品名</th>
-            <th>単価（税込）</th>
-            <th>数量</th>
-            <th>小計</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        
-        <tbody>
-          <% @cart_items.each do |cart_item| %>
-          <tr>
-            <td>
-	            <%= image_tag cart_item.product.image, size: '100x100' %>
-            　<%= cart_item.product.name %>
-            </td>
-            <td><%= (cart_item.product.price * 1.1).floor %></td>
-	          <td><%= form_with model: cart_item, url: cart_item_path(cart_item) do |f| %>
-	           　 <%= f.select :quantity, *[1..99] %>
-	           　 <%= f.submit "変更" %>
-            <td><%= (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %></td>
-            <% @sum +=  (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %>
-            <% end %>
-            </td>
-            <td><%= link_to '削除', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          </tr>
-            <% end %>
-        </tbody>
+      <br>
+      <thead>
+        <tr>
+          <th>商品名</th>
+          <th>単価（税込）</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td>
+            <%= image_tag cart_item.product.image, size: '100x100' %>
+          　<%= cart_item.product.name %>
+          </td>
+          <td><%= (cart_item.product.price * 1.1).floor %> 円</td>
+          <td><%= form_with model: cart_item, url: cart_item_path(cart_item) do |f| %>
+           　 <%= f.select :quantity, *[1..99] %>
+           　 <%= f.submit "変更" %>
+          <td><%= (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %> 円</td>
+          <% @sum +=  (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %>
+          <% end %>
+          </td>
+          <td><%= link_to '削除', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+        </tr>
+          <% end %>
+      </tbody>
     </table>
   </div>
   
-  <div> <%= link_to "買い物を続ける", products_path, class: "btn btn-danger btn-sm" %></div>
-  <div> 合計金額<%= @sum%></div>
-  <div><%= link_to "情報入力へ進む", new_order_path, class: "btn btn-danger btn-sm" %></div>
+  <div style="display: table; width: 100%;">
+    <%= link_to "買い物を続ける", products_path, class: "btn btn-primary btn-lg" %>
+    <div style="display: table-cell; font-size: 1.5rem; padding: 5px; text-align: right;">合計金額 ： <%= @sum %> 円</div>
+  </div>
+
+  <br>
+
+  <div class="d-flex justify-content-center">
+    <%= link_to "情報入力へ進む", new_order_path, class: "btn btn-success btn-lg" %>
+  </div>
 
 </div>
 
