--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h2 class="text-center mb-5">会員情報編集</h2>
+  <h3 class="text-center mb-5">会員情報編集</h3>
   <%= form_with(model: current_customer, url: customers_path, local: true) do |f| %>
     <%= render "public/shared/error_messages", resource: @customer %>
 
@@ -36,8 +36,12 @@
       <%= f.email_field :email, class: "form-control", placeholder: "メールアドレス" %>
     </div>
     <div class="d-flex justify-content-between align-items-center">
-      <%= f.submit "変更を保存", class: "btn btn-primary" %>
+      <%= f.submit "変更を保存", class: "btn btn-success" %>
     </div>
   <% end %>
-      <%= button_to "退会する", quit_customers_path, method: :get, class: "btn btn-danger" %>
+  
+  <div style="overflow: hidden;">
+    <%= button_to "退会する", quit_customers_path, method: :get, class: "btn btn-danger float-right" %>
+  </div>
+
 </div>
