--- a/app/views/public/orders/log.html.erb
+++ b/app/views/public/orders/log.html.erb
@@ -16,9 +16,9 @@
           <% @cart_items.each do |cart_item| %>
             <tr>
               <td class="align-middle" style="word-break:break-all"><%= image_tag cart_item.product.image, format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %><%= cart_item.product.name %></td>
-              <td class="align-middle"><%= (cart_item.product.price*1.1).round %></td>
-              <td class="align-middle"><%= cart_item.quantity %></td>
-              <td class="align-middle"><%=(cart_item.product.price*1.1*cart_item.quantity.to_i).round  %></td>
+              <td class="align-middle"><%= (cart_item.product.price*1.1).round %> 円</td>
+              <td class="align-middle"><%= cart_item.quantity %> 個</td>
+              <td class="align-middle"><%=(cart_item.product.price*1.1*cart_item.quantity.to_i).round  %> 円</td>
             </tr>
             <% @total_amount += (cart_item.product.price*1.1*cart_item.quantity.to_i).round %>
           <% end %>
@@ -32,9 +32,9 @@
     </div>
     <div class="col-sm-3">
       <table class="table table-bordered">
-        <tr><th class="table-active" style="width:50%">送料</th><td>800</td></tr>
-        <tr><th class="table-active" style="width:50%">商品合計</th><td><%= @total_amount.to_s(:delimited) %></td></tr>
-        <tr><th class="table-active" style="width:50%">請求合計</th><td><%= (@total_billing_amount = 800 + @total_amount).to_s(:delimited) %></td></tr>
+        <tr><th class="table-active" style="width:50%">送料</th><td>800 円</td></tr>
+        <tr><th class="table-active" style="width:50%">商品合計</th><td><%= @total_amount.to_s(:delimited) %> 円</td></tr>
+        <tr><th class="table-active" style="width:50%">請求合計</th><td><%= (@total_billing_amount = 800 + @total_amount).to_s(:delimited) %> 円</td></tr>
       </table>
     </div>
   </div>
