--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row"><h2>注文確認画面</h2></div>
   <div class="row">
+    <h2>注文確認画面</h2>
     <div class="col-sm-8 col-md-8 col-lg-8 px-8">
       <p>注文情報</p>
       <table class="table table-bordered">
@@ -8,9 +8,9 @@
         <tr><th class="table-active">配送先</th><td><%= "〒#{@order.shipping_postal_code}" %><br><%= @order.shipping_address %><br><%= @order.shipping_name %></td></tr>
         <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method %></td></tr>
         <tr><th class="table-active">ステータス</th><td><%= @order.status %></td></tr>
-
       </table>
     </div>
+
     <div class="col-sm-3 col-md-3 col-lg-3 px-3 offset-1">
       <p>請求情報</p>
       <table class="table table-bordered">
@@ -20,6 +20,7 @@
       </table>
     </div>
   </div>
+
   <div class="row">
     <div class="col-sm-8 col-md-8 col-lg-8 px-8">
       <p>注文内容</p>
@@ -45,4 +46,5 @@
       </table>
     </div>
   </div>
+
 </div>
