--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -6,17 +6,17 @@
       <table class="table table-bordered">
         <tr><th class="table-active">注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d') %></td></tr>
         <tr><th class="table-active">配送先</th><td><%= "〒#{@order.shipping_postal_code}" %><br><%= @order.shipping_address %><br><%= @order.shipping_name %></td></tr>
-        <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method %></td></tr>
-        <tr><th class="table-active">ステータス</th><td><%= @order.status %></td></tr>
+        <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method_i18n %></td></tr>
+        <tr><th class="table-active">ステータス</th><td><%= @order.status_i18n %></td></tr>
       </table>
     </div>
 
     <div class="col-sm-3 col-md-3 col-lg-3 px-3 offset-1">
       <p>請求情報</p>
       <table class="table table-bordered">
-        <tr><th class="table-active">送料</th><td>800</td></tr>
-        <tr><th class="table-active">商品合計</th><td><%= @order.amount_billed - 800 %></td></tr>
-        <tr><th class="table-active">請求合計</th><td><%= @order.amount_billed %></td></tr>
+        <tr><th class="table-active">送料</th><td>800 円</td></tr>
+        <tr><th class="table-active">商品合計</th><td><%= @order.amount_billed - 800 %> 円</td></tr>
+        <tr><th class="table-active">請求合計</th><td><%= @order.amount_billed %> 円</td></tr>
       </table>
     </div>
   </div>
@@ -37,9 +37,9 @@
         <% @order.order_products.each do |order_product| %>
           <tr>
             <td style="word-break:break-all"><%= order_product.product.name %></td>
-            <td><%= order_product.buy_price %></td>
-            <td><%= order_product.quantity %></td>
-            <td><%= order_product.quantity * order_product.buy_price %></td>
+            <td><%= order_product.buy_price %> 円</td>
+            <td><%= order_product.quantity %> 個</td>
+            <td><%= order_product.quantity * order_product.buy_price %> 円</td>
           </tr>
         <% end %>
         </tbody>
